--- a/data/build.gradle
+++ b/data/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
 
 def config = rootProject.ext.configuration
-def testLibs=rootProject.ext.presentationTestDependencies
-def libs=rootProject.ext.presentationDependencies
+def testLibs=rootProject.ext.dataTestDependencies
+def libs=rootProject.ext.dataDependencies
 
 android {
     compileSdkVersion config.compileSdkVersion
@@ -19,10 +19,8 @@ android {
 
 dependencies {
     testCompile testLibs.mockito
-    testCompile testLibs.espresso
     testCompile testLibs.jUnit
 
-    compile libs.supportDesign
     compile libs.supportAppCompat
 
 }
