--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -27,6 +27,10 @@ android {
 
 dependencies {
 
+    compile project(':domain')
+    compile project(':data')
+    compile project(':common')
+
     compile libs.butterKnife
     compile libs.recyclerView
     compile libs.supportDesign
