--- a/domain/src/main/AndroidManifest.xml
+++ b/domain/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.vpaliy.domain">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.vpaliy.domain">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
         android:supportsRtl="true">
-
     </application>
 
 </manifest>
