--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -28,6 +28,7 @@ sourceSets {
 
 dependencies {
     compile project(':common')
+    compile project(':data')
 
     testCompile testLibs.mockito
     testCompile testLibs.jUnit
