--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 def config = rootProject.ext.configuration
 def testLibs=rootProject.ext.dataTestDependencies
@@ -22,6 +23,7 @@ android {
 dependencies {
 
     compile project(':common')
+    compile project(':domain')
 
     testCompile testLibs.mockito
     testCompile testLibs.jUnit
