--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 def config = rootProject.ext.configuration
 def libs=rootProject.ext.presentationDependencies
