add presenters, views

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -18,6 +18,10 @@ android {
         versionName config.versionName
         testInstrumentationRunner config.testInstrumentationRunner
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
