--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile libs.recyclerView
     compile libs.supportDesign
     compile libs.supportAppCompat
+    annotationProcessor libs.butterKnifeCompiler
 
     testCompile testLibs.mockito
     testCompile testLibs.espresso
