--- a/buildSystem/dependencies.gradle
+++ b/buildSystem/dependencies.gradle
@@ -33,6 +33,7 @@ ext {
     okHttpVersion = '2.5.0'
     androidAnnotationsVersion = '21.0.3'
     arrowVersion = '1.0.0'
+    SQLBriteVersion="1.1.1"
 
     /* Testing versions */
     robolectricVersion = '3.1.1'
@@ -96,7 +97,8 @@ ext {
             RxAndroid:          "io.reactivex:rxandroid:${rxAndroidVersion}",
             javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
             javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-            androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}"
+            androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
+            SQLBrite:           "com.squareup.sqlbrite:sqlbrite:${SQLBriteVersion}"
     ]
 
     dataTestDependencies = [
