--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile libs.recyclerView
     compile libs.supportDesign
     compile libs.supportAppCompat
+    compile libs.Dagger2
+    annotationProcessor libs.Dagger2Compiler
     annotationProcessor libs.butterKnifeCompiler
 
     testCompile testLibs.mockito
