--- a/buildSystem/dependencies.gradle
+++ b/buildSystem/dependencies.gradle
@@ -34,6 +34,7 @@ ext {
     androidAnnotationsVersion = '21.0.3'
     arrowVersion = '1.0.0'
     SQLBriteVersion="1.1.1"
+    ottoEventBusVersion= "1.3.8"
 
     /* Testing versions */
     robolectricVersion = '3.1.1'
@@ -58,7 +59,8 @@ ext {
             recyclerView:       "com.android.support:recyclerview-v7:${supportVersion}",
             RxJava:             "io.reactivex:rxjava:${rxJavaVersion}",
             RxAndroid:          "io.reactivex:rxandroid:${rxAndroidVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}"
+            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+            ottoEventBus:       "com.squareup:otto:${ottoEventBusVersion}"
     ]
 
     presentationTestDependencies = [
