--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".view.activity.RegisterActivity">
+        </activity>
+
     </application>
 
 </manifest>
