--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity android:name=".view.activity.RegisterActivity">
         </activity>
 
+        <activity android:name=".view.activity.DetailsActivity">
+        </activity>
+
     </application>
 
 </manifest>
