added  more UI feature, fixed some critical bugs

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile project(':domain')
     compile project(':data')
     compile project(':common')
+    compile project(':multiplechoice')
 
     compile libs.ottoEventBus
     compile libs.butterKnife
