--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vpaliy.mvp">
 
+    <uses-permission android:name="android.permission.VIBRATE">
+    </uses-permission>
+
     <application
         android:allowBackup="true"
         android:name=".App"
