--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':presentation' ,':domain', ':data' ,':common'
+include ':presentation'
+include ':domain'
+include ':data'
+include ':common'
+include ':multiplechoice'
