--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile libs.supportAppCompat
     compile libs.Dagger2
     compile libs.circleIndicator
+    compile libs.glide
     annotationProcessor libs.Dagger2Compiler
     annotationProcessor libs.butterKnifeCompiler
     provided libs.javaxAnnotation
