--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vpaliy.mvp">
 
-    <uses-permission android:name="android.permission.VIBRATE">
-    </uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -21,10 +20,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.activity.RegisterActivity">
+        <activity
+            android:name=".view.activity.RegisterActivity">
         </activity>
 
-        <activity android:name=".view.activity.DetailsActivity">
+        <activity
+            android:name=".view.activity.DetailsActivity"
+            android:theme="@style/DetailsTheme">
         </activity>
 
     </application>
